--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -17,6 +17,8 @@
     white-space: nowrap;
     text-overflow: ellipsis; 
     position: relative;
+
+    /*animation: slide-up 5s ease;*/
     
     h3 {
     margin: 10px 0 0 0;
