--- a/sass/layouts/_card.scss
+++ b/sass/layouts/_card.scss
@@ -25,6 +25,7 @@
     width: 70%;
     background-color: $colour-lightgray;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.38); 
+    position: relative;
     /*.fa-solid, .fas {
         color: $colour-gray   
     }*/
