--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -6,3 +6,12 @@
         transform: translateY(0);
     }
 }
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
