--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -64,6 +64,7 @@
         border: 0px solid $colour-tertiary;
         border-radius: 50px;
         color: $colour-tertiary;
+        animation: rotate 0.5s ease;
     }
 }
 
