--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,6 +8,11 @@
     /*box-shadow: $box-shadow*/
     color: $colour-white;
     margin: 10px 0 40px 0;
+
+    &:hover {
+        @include background-colour-button--hover
+        
+    } 
 }
 
 .card__button {
@@ -23,7 +28,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: -3%;
+    left: -2%;
 }
 
 .button--green {
