--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,3 +13,6 @@ $colour-primary--light:#F5EDFF;
 $background-colour-button : linear-gradient(103deg, rgba(238,114,218,1) 0%, rgba(169,94,220,1) 96%, rgba(167,92,220,1) 100%);
 /*$background-colour-button--hover :  background: rgb(197,122,224);
 background: linear-gradient(73deg, rgba(197,122,224,1) 0%, rgba(224,131,224,1) 95%);*/ 
+
+$animation-duration: 1s;
+$animation-count: 3;
