--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -15,3 +15,22 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes loader {
+    0% {
+        transform: rotate(0deg);
+    }
+    
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes disappear {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0);
+    }
+}
