--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,14 @@ background: linear-gradient(73deg, rgba(197,122,224,1) 0%, rgba(224,131,224,1) 9
 @keyframes slide-up {
   0% {
     transform: translateY(25%);
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
   }
   100% {
     transform: translateY(0);
+    opacity: 1;
   }
 }
 @keyframes rotate {
@@ -31,10 +36,22 @@ background: linear-gradient(73deg, rgba(197,122,224,1) 0%, rgba(224,131,224,1) 9
 }
 @keyframes disappear {
   from {
-    transform: scale(1);
+    /*transform: scale(1);*/
+    visibility: visible;
   }
   to {
-    transform: scale(0);
+    /*transform: scale(0);*/
+    visibility: hidden;
+  }
+}
+@keyframes disappear-reverse {
+  from {
+    /*transform: scale(1);*/
+    visibility: hidden;
+  }
+  to {
+    /*transform: scale(0);*/
+    visibility: visible;
   }
 }
 /*@import "./utils/placeholders";*/
@@ -564,7 +581,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 1.4s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.6s;
 }
 .entries__card--1 h3 {
   margin: 10px 0 0 0;
@@ -666,7 +684,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.1s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.9s;
 }
 .entries__card--2 h3 {
   margin: 10px 0 0 0;
@@ -768,7 +787,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.4s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 1.2s;
 }
 .entries__card--3 h3 {
   margin: 10px 0 0 0;
@@ -870,7 +890,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.7s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 1.5s;
 }
 .entries__card--4 h3 {
   margin: 10px 0 0 0;
@@ -972,7 +993,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 1.4s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.6s;
 }
 .dishes__card--1 h3 {
   margin: 10px 0 0 0;
@@ -1074,7 +1096,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.1s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.9s;
 }
 .dishes__card--2 h3 {
   margin: 10px 0 0 0;
@@ -1176,7 +1199,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.4s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 1.2s;
 }
 .dishes__card--3 h3 {
   margin: 10px 0 0 0;
@@ -1278,7 +1302,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 1.4s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.6s;
 }
 .desserts__card--1 h3 {
   margin: 10px 0 0 0;
@@ -1380,7 +1405,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.1s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.9s;
 }
 .desserts__card--2 h3 {
   margin: 10px 0 0 0;
@@ -1482,7 +1508,8 @@ header img {
   text-overflow: ellipsis;
   position: relative;
   /*animation: slide-up 5s ease;*/
-  animation: slide-up 2.4s ease;
+  animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 1.2s;
 }
 .desserts__card--3 h3 {
   margin: 10px 0 0 0;
