--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./utils/functions";
 @import "./utils/mixins";
 @import "./utils/keyframes";
+@import "./utils/maps";
 /*@import "./utils/placeholders";*/
 
 /*import feuille de style externes comme le normalizer*/
