--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -244,5 +244,8 @@
 }
 
 @mixin tablette-desktop {
-    
+    @media screen and (min-width: map-get($breakpoints, tablette-desktop)){
+        @content;
+    }
+        
 }
