--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,22 +6,22 @@ body {
 }
 
 h1 {
-    font-family: 'Shrikhand', sans-serif;
-    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
     font-size: 22px ;
     font-style: normal;
 }
 
 h2 {
-    font-family: 'Shrikhand', sans-serif;
-    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
     font-size: 17px ;
     font-style: normal;   
 }
 
 h3 {
-    font-family: 'Shrikhand', sans-serif;
-    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
     font-size: 15px ;
     font-style: normal;
 }
