--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -14,6 +14,7 @@ footer {
     margin: 0;
     padding: 0px 0px 0 20px;
     color: $colour-white;
+    font-family: 'Shrikhand', sans-serif;
   }
 
   ul {
