MAJ pour validateur HTML

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,6 +226,7 @@ a {
   position: absolute;
   right: 28%;
   bottom: 3.5%;
+  font-weight: 900;
 }
 @media screen and (min-width: 413px) {
   .button--order {
