--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -62,6 +62,7 @@
     position: absolute;
     right: 28%;
     bottom: 3.5%;
+    font-weight: 900;
     
     @include tablette-desktop {
         right: 40%;
