MAJ mise en forme

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,7 +2,8 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px; 
     font-weight: 100;
-    line-height: 20px;   
+    line-height: 20px; 
+    background-color: $colour-lightgray;  
 }
 
 h1 {
