--- a/sass/components/_picture.scss
+++ b/sass/components/_picture.scss
@@ -1,6 +1,6 @@
 .picture--top-menu {
     margin: 0;
-    position: absolute;
+    /*position: absolute;*/
     & img {
         /*object-fit: cover;*/
         width: 100%;
