--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,40 @@
 /*$box-shadow :0 4px 8px 0 rgba(0, 0, 0, 0.38);*/
 /*$background-colour-button--hover :  background: rgb(197,122,224);
 background: linear-gradient(73deg, rgba(197,122,224,1) 0%, rgba(224,131,224,1) 95%);*/
+/*@mixin menu-container--higher-height {
+    background-color: $colour-lightgray;
+    height: 1225px;
+    border-radius: 50px 50px 0px 0px;
+    position: relative;
+    margin-top: 50%;
+
+    h1 {
+        padding: 40px 0 0 15px;
+        position: relative;
+
+        .fa-regular, .far {
+            position: absolute;
+            right: 8%;
+            bottom: 0%;
+
+            &:hover {
+                display: none;
+            }
+        }
+
+        .fa-solid, .fas {
+            display: none;
+
+            &:hover {
+                position: absolute;
+                right: 8%;
+                bottom: 0%;
+                color: $colour-primary;
+                display: block;
+            }
+        }
+    }
+}*/
 /*@mixin menu-container--hover {
     &:hover {
         h1 .fa-regular, .far {
@@ -69,11 +103,30 @@ background: linear-gradient(73deg, rgba(197,122,224,1) 0%, rgba(224,131,224,1) 9
     visibility: visible;
   }
 }
+@keyframes like {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /*@import "./utils/placeholders";*/
 /*import feuille de style externes comme le normalizer*/
 body {
-  margin: 0;
+  margin: 0 auto;
   position: relative;
+  /*max-width: 1200px auto;*/
+  max-width: 1400px;
 }
 
 .preloader {
@@ -114,6 +167,7 @@ body {
   font-size: 14px;
   font-weight: 100;
   line-height: 20px;
+  background-color: #F7F7F7;
 }
 
 h1 {
@@ -172,6 +226,7 @@ a {
   /*box-shadow: $box-shadow*/
   color: #fff;
   margin: 10px 0 40px 0;
+  font-weight: bold;
 }
 .introduction__button:hover {
   background: rgb(197, 122, 224);
@@ -223,10 +278,12 @@ a {
   border: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.38);
   color: #fff;
-  position: absolute;
+  /*position: absolute;
   right: 28%;
-  bottom: 3.5%;
+  bottom: 3.5%;*/
   font-weight: 900;
+  width: fit-content;
+  margin: 40px auto;
 }
 @media screen and (min-width: 413px) {
   .button--order {
@@ -265,11 +322,18 @@ a {
   top: 0%;
   right: 8%;
   font-size: 30px;
-  color: #9356DC;
+  /*color: $colour-primary;*/
   display: none;
 }
 .homepage-button--like:hover .homepage-heart-button--full {
   display: block;
+  /*animation: slide-up 1s ease-in-out backwards;
+  animation-delay: 0.6s;*/
+  animation: like 1s ease-in-out backwards;
+  background: linear-gradient(103deg, rgb(238, 114, 218) 0%, rgb(169, 94, 220) 96%, rgb(167, 92, 220) 100%) no-repeat;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .button--like {
@@ -289,18 +353,23 @@ a {
 .button--like .heart-button--full {
   position: absolute;
   top: 2.7%;
-  right: 8%;
+  right: 5%;
   font-size: 30px;
   color: #9356DC;
   display: none;
 }
 .button--like:hover .heart-button--full {
   display: block;
+  animation: like 1s ease-in-out backwards;
+  background: linear-gradient(103deg, rgb(238, 114, 218) 0%, rgb(169, 94, 220) 96%, rgb(167, 92, 220) 100%) no-repeat;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .picture--top-menu {
   margin: 0;
-  position: absolute;
+  /*position: absolute;*/
 }
 .picture--top-menu img {
   /*object-fit: cover;*/
@@ -324,13 +393,30 @@ a {
 
 /*supprimer la classe section introduction*/
 .fonctionnement {
-  height: 300px;
+  /*height: 300px;*/
+  background: #fff;
+  padding: 10px 0px 45px 0px;
   /*Supprimer class fonctionnement title*/
+}
+@media screen and (min-width: 413px) {
+  .fonctionnement {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 45px 0px 45px 0px;
+  }
 }
 .fonctionnement__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 413px) {
+  .fonctionnement__container {
+    flex-direction: row;
+    width: 100%;
+  }
 }
 .fonctionnement h1 {
   margin: 40px 0 20px 25px;
@@ -338,10 +424,29 @@ a {
 
 .restaurants {
   background-color: #F7F7F7;
-  height: 1210px;
+  /*height: 1210px;*/
+  padding-bottom: 45px;
 }
 .restaurants h1 {
   padding: 40px 0 0 25px;
+}
+.restaurants a {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+@media screen and (min-width: 413px) {
+  .restaurants {
+    padding-bottom: 45px;
+    /*display: flex;*/
+  }
+  .restaurants h1 {
+    text-align: center;
+  }
+  .restaurants a {
+    width: 50%;
+    max-width: 500px;
+  }
 }
 .restaurants__container {
   display: flex;
@@ -349,19 +454,23 @@ a {
   align-items: center;
   width: 100%;
 }
-.restaurants a {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 413px) {
+  .restaurants__container {
+    display: flex;
+    flex-direction: row;
+    /*width: 100%;*/
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 /*Ajouter une extension pour appliquer même style aux autres menus*/
 .a-la-francaise {
   background-color: #F7F7F7;
-  height: 1135px;
+  /*height: 1135px;*/
   border-radius: 50px 50px 0px 0px;
   position: relative;
-  margin-top: 50%;
+  margin-top: -65px;
   /*@include menu-container--hover;*/
   /*h1 .fa-regular, .far {
       position: absolute;
@@ -412,10 +521,10 @@ a {
 
 .la-note-enchantee {
   background-color: #F7F7F7;
-  height: 1225px;
+  /*height: 1135px;*/
   border-radius: 50px 50px 0px 0px;
   position: relative;
-  margin-top: 50%;
+  margin-top: -65px;
   /*@include menu-container--hover;*/
 }
 .la-note-enchantee h1 {
@@ -443,10 +552,10 @@ a {
 
 .la-palette-du-gout {
   background-color: #F7F7F7;
-  height: 1135px;
+  /*height: 1135px;*/
   border-radius: 50px 50px 0px 0px;
   position: relative;
-  margin-top: 50%;
+  margin-top: -65px;
   /*@include menu-container--hover;*/
 }
 .la-palette-du-gout h1 {
@@ -474,10 +583,10 @@ a {
 
 .le-delice-des-sens {
   background-color: #F7F7F7;
-  height: 1135px;
+  /*height: 1135px;*/
   border-radius: 50px 50px 0px 0px;
   position: relative;
-  margin-top: 50%;
+  margin-top: -65px;
   /*@include menu-container--hover;*/
 }
 .le-delice-des-sens h1 {
@@ -552,6 +661,9 @@ header figure {
 header img {
   width: 150px;
 }
+header a {
+  background: #F7F7F7;
+}
 
 .category__card {
   border-bottom: 3px solid #99E2D0;
@@ -590,6 +702,16 @@ header img {
   /*.fa-solid, .fas {
       color: $colour-gray   
   }*/
+}
+@media screen and (min-width: 413px) {
+  .fonctionnement__card {
+    max-width: 400px;
+    margin: 0px 20px;
+    /*height: 50%;*/
+    /*span {
+        margin-left: 30px;
+    }*/
+  }
 }
 .fonctionnement__card:hover {
   background: #F5EDFF;
