--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,6 +1,8 @@
 body {
-    margin: 0;
+    margin: 0 auto;
     position: relative;
+    /*max-width: 1200px auto;*/
+    max-width: 1400px;
 }
 
 .preloader {
