--- a/sass/layouts/_container.scss
+++ b/sass/layouts/_container.scss
@@ -17,12 +17,27 @@
 /*supprimer la classe section introduction*/
 
 .fonctionnement {
-    height: 300px;
+    /*height: 300px;*/
+    background: $colour-white;
+    padding: 10px 0px 45px 0px;
+
+    @include tablette-desktop {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 45px 0px 45px 0px;
+    }
 
 &__container {
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center; 
+    
+    @include tablette-desktop {
+        flex-direction: row;
+        width: 100%;
+    }
 }
 
 /*Supprimer class fonctionnement title*/
@@ -34,10 +49,31 @@ h1 {
 
 .restaurants {
     background-color: $colour-lightgray;
-    height: 1210px;
+    /*height: 1210px;*/
+    padding-bottom: 45px;
     
     h1 {
         padding: 40px 0 0 25px;
+    }
+
+    a {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    @include tablette-desktop {
+        padding-bottom: 45px;
+        /*display: flex;*/
+
+    h1 {
+        text-align: center;
+    }
+
+    a {
+        width: 50%;
+        max-width: 500px;
+    }
     }
 
     &__container {
@@ -45,12 +81,14 @@ h1 {
         flex-direction: column;
         align-items: center;
         width: 100%;
-    }
 
-    a {
-        width: 100%;
-        display: flex;
-        justify-content: center;
+        @include tablette-desktop {
+            display: flex;
+            flex-direction: row;
+            /*width: 100%;*/
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 }
 
@@ -85,7 +123,7 @@ h1 {
 }
 
 .la-note-enchantee {
-    @include menu-container--higher-height;
+    @include menu-container;
     /*@include menu-container--hover;*/
 }
 
